--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOCAL-STORAGE API</title>
     <link rel="stylesheet" href="style.css">
+    <meta property="og:image" content="./images/database.png" />
+    <meta property="image" content="./images/database.png" />
+    <meta name="description" content="Web Storage API is a set of mechanisms that enable browsers to store key-value pairs" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;800&family=Raleway:wght@400;500;700;900&display=swap" rel="stylesheet">
